--- a/Overtime.html
+++ b/Overtime.html
@@ -32,20 +32,20 @@
                 <div class="grid-container">
                     <h2>Currency</h2>
                     <div class="currency-selector">
-                        <button onclick="handleCurrencyChange('$')" class="selected">$</button>
-                        <button onclick="handleCurrencyChange('€')">€</button>
-                        <button onclick="handleCurrencyChange('£')">£</button>
-                        <button onclick="handleCurrencyChange('₹')">₹</button>
-                        <button onclick="handleCurrencyChange('¥')">¥</button>
+                        <button onclick="handleCurrencyChange(event, '$')" class="selected">$</button>
+                        <button onclick="handleCurrencyChange(event, '€')">€</button>
+                        <button onclick="handleCurrencyChange(event, '£')">£</button>
+                        <button onclick="handleCurrencyChange(event, '₹')">₹</button>
+                        <button onclick="handleCurrencyChange(event, '¥')">¥</button>
                     </div>
                     <h2>Pay rate choice:</h2>
                     <div class="pay-rate-selector currency-selector">
-                        <button onclick="handlePayRateChoice('Hourly')" class="selected">Hourly</button>
-                        <button onclick="handlePayRateChoice('Daily')">Daily</button>
-                        <button onclick="handlePayRateChoice('Weekly')">Weekly</button>
-                        <button onclick="handlePayRateChoice('Biweekly')">Biweekly</button>
-                        <button onclick="handlePayRateChoice('Monthly')">Monthly</button>
-                        <button onclick="handlePayRateChoice('Annual')">Annual</button>
+                        <button onclick="handlePayRateChoice(event, 'Hourly')" class="selected">Hourly</button>
+                        <button onclick="handlePayRateChoice(event, 'Daily')">Daily</button>
+                        <button onclick="handlePayRateChoice(event, 'Weekly')">Weekly</button>
+                        <button onclick="handlePayRateChoice(event, 'Biweekly')">Biweekly</button>
+                        <button onclick="handlePayRateChoice(event, 'Monthly')">Monthly</button>
+                        <button onclick="handlePayRateChoice(event, 'Annual')">Annual</button>
                     </div>
                     <div class="input-group">
                         <label for="hourly-wage">Hourly Rate</label>
@@ -112,31 +112,40 @@
             '$': 1, '€': 0.85, '£': 0.75, '₹': 74.21, '¥': 114.41
         };
 
+        let selectedCurrency = '$';
         let payRateChoice = 'Hourly';
 
-        function handleCurrencyChange(currency) {
-            document.querySelectorAll('.currency-selector button').forEach(button => {
-                button.classList.remove('selected');
-            });
-            event.target.classList.add('selected');
-            document.getElementById('selected-currency').textContent = currency;
+        function handleCurrencyChange(event, currency) {
+            const target = event.target;
+            if (target) {
+                const buttons = document.querySelectorAll('.currency-selector button');
+                buttons.forEach(button => {
+                    button.classList.remove('selected');
+                });
+                target.classList.add('selected');
+                document.getElementById('selected-currency').textContent = currency;
+            }
         }
 
-        function handlePayRateChoice(choice) {
-            document.querySelectorAll('.pay-rate-selector button').forEach(button => {
-                button.classList.remove('selected');
-            });
-            event.target.classList.add('selected');
+        function handlePayRateChoice(event, choice) {
+            const target = event.target;
+            if (target) {
+                const buttons = document.querySelectorAll('.pay-rate-selector button');
+                buttons.forEach(button => {
+                    button.classList.remove('selected');
+                });
+                target.classList.add('selected');
 
-            var hourlyPayLabel = document.querySelector('.input-group label');
-            if (hourlyPayLabel) {
-                if (choice === 'Hourly') {
-                    hourlyPayLabel.textContent = 'Hourly pay rate:';
-                } else {
-                    hourlyPayLabel.textContent = 'Standard ' + choice.toLowerCase() + ' pay rate:';
+                const hourlyPayLabel = document.querySelector('.input-group label');
+                if (hourlyPayLabel) {
+                    if (choice === 'Hourly') {
+                        hourlyPayLabel.textContent = 'Hourly pay rate:';
+                    } else {
+                        hourlyPayLabel.textContent = 'Standard ' + choice.toLowerCase() + ' pay rate:';
+                    }
                 }
+                payRateChoice = choice;
             }
-            payRateChoice = choice;
         }
 
         function updateOvertimeMultiplier() {
@@ -151,8 +160,8 @@
         }
 
         function calculateRates() {
-            var currency = document.getElementById('selected-currency').textContent;
-            var payRateChoice = document.querySelector('.currency-selector button.selected').textContent;
+            var currency = selectedCurrency;
+            var payRateChoice = document.querySelector('.pay-rate-selector button.selected').textContent;
             var standardPayRate = parseFloat(document.getElementById('hourly-wage-slider').value);
             var hoursWorkedOvertime = parseFloat(document.getElementById('hours-worked-overtime').value) || 0;
             var overtimeMultiplier = parseFloat(document.getElementById('selected-overtime-multiplier').value);
@@ -211,8 +220,8 @@
 
             var resultElement = document.getElementById('result');
             resultElement.innerHTML =
-                '<div>'
-            '<h2>Overtime pay calculation</h2>' +
+                '<div>' +
+                '<h2>Overtime pay calculation</h2>' +
                 '<p>Overtime pay rate: ' + formattedOvertimePayRate + '</p>' +
                 '<p>Standard pay rate: ' + formattedStandardPayRate + '</p>' +
                 '<p>Standard overtime pay: ' + formattedStandardOvertimePay + '</p>' +
@@ -243,38 +252,8 @@
             handleCurrencyChange('$');
             handlePayRateChoice('Hourly');
 
-            // Close popup
-            document.getElementById('close-popup').addEventListener('click', function () {
-                document.getElementById('popup').style.display = 'none';
-            });
-
             // Event listener for calculate button
             document.querySelector('.calculate-btn').addEventListener('click', calculateRates);
-
-            // Event listeners for pay rate choices
-            document.getElementById('hourly').addEventListener('click', function () {
-                handlePayRateChoice('Hourly');
-            });
-
-            document.getElementById('daily').addEventListener('click', function () {
-                handlePayRateChoice('Daily');
-            });
-
-            document.getElementById('weekly').addEventListener('click', function () {
-                handlePayRateChoice('Weekly');
-            });
-
-            document.getElementById('biweekly').addEventListener('click', function () {
-                handlePayRateChoice('Biweekly');
-            });
-
-            document.getElementById('monthly').addEventListener('click', function () {
-                handlePayRateChoice('Monthly');
-            });
-
-            document.getElementById('annual').addEventListener('click', function () {
-                handlePayRateChoice('Annual');
-            });
         });
 
     </script>
