--- a/Salary-to-Hourly.html
+++ b/Salary-to-Hourly.html
@@ -32,20 +32,20 @@
                 <div class="grid-container">
                     <h2>Currency</h2>
                     <div class="currency-selector">
-                        <button onclick="handleCurrencyChange('$')" class="selected">$</button>
-                        <button onclick="handleCurrencyChange('€')">€</button>
-                        <button onclick="handleCurrencyChange('£')">£</button>
-                        <button onclick="handleCurrencyChange('₹')">₹</button>
-                        <button onclick="handleCurrencyChange('¥')">¥</button>
+                        <button onclick="handleCurrencyChange(event, '$')" class="selected">$</button>
+                        <button onclick="handleCurrencyChange(event, '€')">€</button>
+                        <button onclick="handleCurrencyChange(event, '£')">£</button>
+                        <button onclick="handleCurrencyChange(event, '₹')">₹</button>
+                        <button onclick="handleCurrencyChange(event, '¥')">¥</button>
                     </div>
                     <h2>Pay rate choice:</h2>
                     <div class="pay-rate-selector currency-selector">
-                        <button onclick="handlePayRateChoice('Hourly')" class="selected">Hourly</button>
-                        <button onclick="handlePayRateChoice('Daily')">Daily</button>
-                        <button onclick="handlePayRateChoice('Weekly')">Weekly</button>
-                        <button onclick="handlePayRateChoice('Biweekly')">Biweekly</button>
-                        <button onclick="handlePayRateChoice('Monthly')">Monthly</button>
-                        <button onclick="handlePayRateChoice('Annual')">Annual</button>
+                        <button onclick="handlePayRateChoice(event, 'Hourly')" class="selected">Hourly</button>
+                        <button onclick="handlePayRateChoice(event, 'Daily')">Daily</button>
+                        <button onclick="handlePayRateChoice(event, 'Weekly')">Weekly</button>
+                        <button onclick="handlePayRateChoice(event, 'Biweekly')">Biweekly</button>
+                        <button onclick="handlePayRateChoice(event, 'Monthly')">Monthly</button>
+                        <button onclick="handlePayRateChoice(event, 'Annual')">Annual</button>
                     </div>
                     <div class="input-group">
                         <label for="hourly-wage">Salary: </label>
@@ -108,29 +108,37 @@
 
         let payRateChoice = 'Annual';
 
-        function handleCurrencyChange(currency) {
-            document.querySelectorAll('.currency-selector button').forEach(button => {
-                button.classList.remove('selected');
-            });
-            event.target.classList.add('selected');
-            document.getElementById('selected-currency').textContent = currency;
+        function handleCurrencyChange(event, currency) {
+            const target = event.target;
+            if (target) {
+                const buttons = document.querySelectorAll('.currency-selector button');
+                buttons.forEach(button => {
+                    button.classList.remove('selected');
+                });
+                target.classList.add('selected');
+                document.getElementById('selected-currency').textContent = currency;
+            }
         }
 
-        function handlePayRateChoice(choice) {
-            document.querySelectorAll('.pay-rate-selector button').forEach(button => {
-                button.classList.remove('selected');
-            });
-            event.target.classList.add('selected');
+        function handlePayRateChoice(event, choice) {
+            const target = event.target;
+            if (target) {
+                const buttons = document.querySelectorAll('.pay-rate-selector button');
+                buttons.forEach(button => {
+                    button.classList.remove('selected');
+                });
+                target.classList.add('selected');
 
-            var hourlyPayLabel = document.querySelector('.input-group label');
-            if (hourlyPayLabel) {
-                if (choice === 'Annual') {
-                    hourlyPayLabel.textContent = 'Annual Salary:';
-                } else {
-                    hourlyPayLabel.textContent = 'Standard ' + choice.toLowerCase() + ' pay:';
+                const hourlyPayLabel = document.querySelector('.input-group label');
+                if (hourlyPayLabel) {
+                    if (choice === 'Annual') {
+                        hourlyPayLabel.textContent = 'Annual pay rate:';
+                    } else {
+                        hourlyPayLabel.textContent = 'Standard ' + choice.toLowerCase() + ' pay rate:';
+                    }
                 }
+                payRateChoice = choice;
             }
-            payRateChoice = choice;
         }
 
         const calculateRates = () => {
@@ -164,12 +172,12 @@
                 }
 
                 document.getElementById('calculated-salary').innerHTML =
-                    '<div style="background-color: rgb(229 231 235); padding: 10px; max-width: 500px; margin: 0 auto; border-radius: 10px; margin-bottom:40px; margin-top:40px; ">' +
+                    '<div style="background-color: rgb(229 231 235); padding: 10px; max-width: 500px; margin: 0 auto; border-radius: 10px; margin-bottom:40px; margin-top:80px; ">' +
                     '<h2 style="font-size: 1.5em; color: #333; padding: 10px;">Results:</h2>' +
-                    '<p style="font-size: 1.2em; color: #666; background-color: white; padding: 10px; margin: 5px; border-radius: 5px;">Hourly Pay: <span style="font-weight: bold; color: #000;">' + currency + ' ' + hourly.toFixed(2) + '</span></p>' +
-                    '<p style="font-size: 1.2em; color: #666; background-color: white; padding: 10px; margin: 5px; border-radius: 5px;">Monthly Pay (avg): <span style="font-weight: bold; color: #000;">' + currency + ' ' + monthly.toFixed(2) + '</span></p>' +
-                    '<p style="font-size: 1.2em; color: #666; background-color: white; padding: 10px; margin: 5px; border-radius: 5px;">Per Week: <span style="font-weight: bold; color: #000;">' + currency + ' ' + weekly.toFixed(2) + '</span></p>' +
-                    '<p style="font-size: 1.2em; color: #666; background-color: white; padding: 10px; margin: 5px; border-radius: 5px;">% of US median salary: <span style="font-weight: bold; color: #000;">' + ((annualSalary / exchangeRates['$'].medianSalary) * 100).toFixed(1) + '%</span></p>' +
+                    '<p style="font-size: 1.2em; color: #666; background-color: white; padding: 10px; margin: 5px; border-radius: 5px; ">Hourly Pay: <span style="font-weight: bold; color: #000; margin-left:5px;">' + currency + ' ' + hourly.toFixed(2) + '</span></p>' +
+                    '<p style="font-size: 1.2em; color: #666; background-color: white; padding: 10px; margin: 5px; border-radius: 5px;">Monthly Pay (avg): <span style="font-weight: bold; color: #000; margin-left:5px;">' + currency + ' ' + monthly.toFixed(2) + '</span></p>' +
+                    '<p style="font-size: 1.2em; color: #666; background-color: white; padding: 10px; margin: 5px; border-radius: 5px;">Per Week: <span style="font-weight: bold; color: #000; margin-left:5px;">' + currency + ' ' + weekly.toFixed(2) + '</span></p>' +
+                    '<p style="font-size: 1.2em; color: #666; background-color: white; padding: 10px; margin: 5px; border-radius: 5px;">% of US median salary: <span style="font-weight: bold; color: #000; margin-left:5px;">' + ((annualSalary / exchangeRates['$'].medianSalary) * 100).toFixed(1) + '%</span></p>' +
                     '</div>';
             } else {
                 document.getElementById('calculated-salary').innerHTML = "Please enter valid values for salary, hours per week, and weeks per year.";
@@ -185,10 +193,6 @@
         document.addEventListener("DOMContentLoaded", function () {
             handleCurrencyChange('$');
             handlePayRateChoice('Annual');
-
-            document.getElementById('close-popup').addEventListener('click', function () {
-                document.getElementById('popup').style.display = 'none';
-            });
         });
     </script>
 
